# translator_EN-FR

./: .gitignore  README.md  main.py  pyproject.toml
notebooks/: data_exploration.ipynb  testing.ipynb
src/: Translation_Data.py  Vocab.py  models.py
