[project]
name = "homework-5"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "evaluate>=0.4.3",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.3",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "pandas-stubs>=2.2.3.250308",
    "sacrebleu>=2.5.1",
    "torch>=2.7.0",
    "tqdm>=4.67.1",
]
